# algo-9

./: .env.example  Complete Project Structure  How to Run  README.md  auto_trader.py  config.py  confluence_scorer.py  dhan_client.py  gate.py  greeks_calculator.py  logging_setup.py  main.py  market_feed.py  option_chain.py  option_chain_fetcher.py  pyproject.toml  requirements.txt  rest.py  runner.py  trade_builder.py  virtual_portfolio.py  ws_marketfeed.py
