[project]
name = "dhan-options-ensemble"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "python-dotenv>=1.0.0",
  "pydantic>=2.0.0",
  "requests>=2.31.0",
  "pandas>=2.0.0",
  "numpy>=1.26.0",
  "websockets>=12.0",
  "rich>=13.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
